--- a/FP3C6 - 01 Aulas Iniciais/03 Ionic/01aula-inicial/src/app/home/home.page.scss
+++ b/FP3C6 - 01 Aulas Iniciais/03 Ionic/01aula-inicial/src/app/home/home.page.scss
@@ -1,3 +1,10 @@
+#lista-item:hover {
+  cursor: pointer;
+  color: red;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+// Gerado automaticamente
 #container {
   text-align: center;
 
