--- a/FP3C6 - 01 Aulas Iniciais/03 Ionic/01aula-inicial/src/app/home/home.page.html
+++ b/FP3C6 - 01 Aulas Iniciais/03 Ionic/01aula-inicial/src/app/home/home.page.html
@@ -32,34 +32,45 @@
     <strong>ngFor</strong> :: Utilizado para percorrer um laço de repetição e
     inserindo conteúdos na página.
   </p>
-  <ion-button
-    (click)="alterarShow()"
-    shape="round"
-    fill="outline"
-    color="success"
-  >
-    <ion-icon name="eye" *ngIf="show"/>
-    <ion-icon name="eye-off" *ngIf="!show"/>
-  </ion-button>
 
-  <h3 *ngIf="show">Listas</h3>
-
+  <h3>Inputs</h3>
   <ion-input label="Nome" [(ngModel)]="nome" placeholder="Informe um nome" />
-  <ion-button
-    (click)="adicionar()"
-    shape="round"
-    fill="outline"
-    color="success">
-    <ion-icon slot="start" name="person-add"/>
+  <ion-input label="Salário" [(ngModel)]="salario" type="number" placeholder="Informe um salário" />
+  <ion-button (click)="adicionar()" shape="round" fill="outline" color="success">
+    <ion-icon slot="start" name="person-add" />
     Adicionar
   </ion-button>
 
+  <h3>Grid</h3>
+  <div id="container">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6"><strong>Nome</strong></ion-col>
+        <ion-col size="4"><strong>Salário</strong></ion-col>
+        <ion-col size="2"></ion-col>
+      </ion-row>
+      <ion-row *ngFor="let item of listaPessoas; let i = index">
+        <ion-col size="6">{{ item.nome }}</ion-col>
+        <!-- Aplicar um estilo, a depender dos valores ::
+            primeiro o atributo entre [] e dentro das {} um par "estilo" e condição -->
+        <ion-col size="4" [class]="{'azul' : item.salario > 2000}">{{ item.salario }}</ion-col>
+        <ion-col size="2" id="grid-item-excluir" (click)="excluirPessoa(i)"><ion-icon name="trash" /></ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+
+  <ion-button (click)="alterarShow()" shape="round" fill="outline" color="success">
+    <ion-icon name="eye" *ngIf="show" />
+    <ion-icon name="eye-off" *ngIf="!show" />
+  </ion-button>
+
+  <h3 *ngIf="show">Listas</h3>
   <ion-list *ngIf="show">
     <ion-list-header>
       <ion-label>Alunos Presentes</ion-label>
     </ion-list-header>
     <ion-item *ngFor="let item of nomes; let i = index">
-      <ion-label id="lista-item" (click)="excluir(i)">{{ (i + 1) + " :: " + item }}</ion-label>
+      <ion-label id="lista-item" (click)="excluirLista(i)">{{ (i + 1) + " :: " + item }}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
