--- a/FP3C6 - 01 Aulas Iniciais/03 Ionic/01aula-inicial/src/app/home/home.page.scss
+++ b/FP3C6 - 01 Aulas Iniciais/03 Ionic/01aula-inicial/src/app/home/home.page.scss
@@ -1,34 +1,22 @@
-#lista-item:hover {
+#lista-item:hover,
+// ion-row:not(:first-child):hover
+#grid-item-excluir:hover {
   cursor: pointer;
   color: red;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
-// Gerado automaticamente
+ion-row:nth-child(even){
+  background-color: #8c8c8c;
+}
+// ion-row:nth-child(odd):not(:first-child){
+//   background-color:whitesmoke;
+// }
+
 #container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  margin: 10px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.azul{
+  color: blue;
 }
