--- a/FP3C6 - 02 Cadastros e Listas/02ListaTarefas/src/app/home/home.page.html
+++ b/FP3C6 - 02 Cadastros e Listas/02ListaTarefas/src/app/home/home.page.html
@@ -1,20 +1,51 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+  <ion-toolbar><ion-title>Lista de Tarefas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div>
+    <h3>Cadastro de Tarefas</h3>
+    <ion-input label="Descrição" [(ngModel)]="tarefa.descricao" placeholder="Descreva sua tarefa" />
+    <ion-button (click)="adicionar()" shape="round" fill="outline" color="success">
+      <ion-icon slot="start" name="add-circle" />
+      Adicionar
+    </ion-button>
+  </div>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div>
+    <h3>Tarefas...</h3>
+    <div id="container">
+      <ion-grid>
+        <ion-row>
+          <ion-col size="6"><strong>Descrição</strong></ion-col>
+          <ion-col size="4"><strong>Status</strong></ion-col>
+          <ion-col size="2"></ion-col>
+        </ion-row>
+        <!-- Apesar de ainda não ter visto essa diretriz de ngClass, fui atras de algo para deixar
+          as tarefas diferenciadas quanto aos seus status -->
+        <ion-row *ngFor="let item of listaTarefas; let i = index" class="linhas-tabela" [ngClass]="{
+          'tarefa-cancelada': item.status === 'Cancelada',
+          'tarefa-finalizada': item.status ==='Finalizada'
+          }">
+          <ion-col size="6">{{ item.descricao }}</ion-col>
+          <ion-col size="4">{{ item.status }}</ion-col>
+          <ion-col size="2" class="button-col" *ngIf="showComandos(i)">
+            <ion-button (click)="excluir(i)" shape="round" fill="outline" color="danger">
+              <ion-icon slot="start" name="trash" />
+              Excluir
+            </ion-button>
+            <ion-button (click)="finalizar(i)" shape="round" fill="outline" color="success">
+              <ion-icon slot="start" name="checkmark-done-circle" />
+              Finalizar
+            </ion-button>
+            <ion-button (click)="cancelar(i)" shape="round" fill="outline" color="warning">
+              <ion-icon slot="start" name="close-circle" />
+              Cancelar
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
   </div>
 </ion-content>
