Sala de Aula 2309.14 -- Correção da Atividade Avaliativa I, somatório dos valores dos produtos

--- a/FP3C6 - 00 Atividades Avaliativas/01AtividadePratica/src/app/home/home.page.html
+++ b/FP3C6 - 00 Atividades Avaliativas/01AtividadePratica/src/app/home/home.page.html
@@ -28,5 +28,11 @@
       </ion-row>
     </ion-grid>
 
+    <p>
+      <ion-text color="success">
+        Valor total do produtos {{ somatorio() | currency}}
+      </ion-text>
+    </p>
+
   </div>
 </ion-content>
