--- a/FP3C6 - 04 Back-end/06AppJWT/src/app/login/login.page.html
+++ b/FP3C6 - 04 Back-end/06AppJWT/src/app/login/login.page.html
@@ -5,9 +5,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-item>
+      <ion-input type="email" label="email" position="floating"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Senha</ion-label>
+    <ion-input type="password" value="password"></ion-input>
+    </ion-item>
+    <ion-button fill="outline">Acessar</ion-button>
+
+  </ion-list>
 </ion-content>
