--- a/FP3C6 - 00 Atividades Avaliativas/03AtividadePratica/03AtividadePraticaFrontend/src/app/home/home.page.html
+++ b/FP3C6 - 00 Atividades Avaliativas/03AtividadePratica/03AtividadePraticaFrontend/src/app/home/home.page.html
@@ -8,9 +8,9 @@
       <ion-col size="6"><strong>Nome</strong></ion-col>
       <ion-col size="2"></ion-col>
     </ion-row>
-    <ion-row *ngFor="user of usuarios; let i = index">
-      <ion-col size="6">{{ user.nome }}</ion-col>
-      <ion-col size="2" (click)="excluirPessoa(i)"
+    <ion-row *ngFor="let user of usuarios; let i = index">
+      <ion-col size="6">{{ user.nome}}</ion-col>
+      <ion-col size="2" (click)="excluirPessoa(user.id, i)"
         ><ion-icon name="trash"
       /></ion-col>
     </ion-row>
